# discord.http

./: .buildinfo  .gitignore  .nojekyll  CNAME  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
_modules/: index.html
api/: asset.html  backend.html  channel.html  client.html  colour.html  commands.html  context.html  cooldowns.html  embeds.html  emoji.html  entitlements.html  enums.html  errors.html  file.html  flag.html  guild.html  http.html  invite.html  member.html  mentions.html  message.html  multipart.html  object.html  response.html  role.html  sticker.html  tasks.html  user.html  view.html  voice.html  webhook.html
discord_http/: __init__.py  __main__.py  asset.py  backend.py  channel.py  client.py  colour.py  commands.py  context.py  cooldowns.py  embeds.py  emoji.py  entitlements.py  enums.py  errors.py  file.py  flag.py  guild.py  http.py  invite.py  member.py  mentions.py  message.py  multipart.py  object.py  response.py  role.py  sticker.py  tasks.py  user.py  utils.py  view.py  voice.py  webhook.py
docs/: conf.py  index.rst
examples/: autocomplete_example.py  backend_example.py  button_example.py  cog_example.py  offline_example.py  ping_cmd_example.py  prompt_example.py  regex_example.py  select_example.py  user_command_example.py
pages/: api.html  backend.html  contribute.html  events.html  getting_started.html  github.html  license.html
tests/: config.json.example  manual_testing.py
(+74 files in other folders)
