[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.source]
name = "public"
url = "https://github.com/joyn-gg/discord.http"

[project]
name = "discord.http"
description = "Python library that handles interactions from Discord POST requests."
requires-python = ">=3.11.0"
license = {text = "MIT"}

dynamic = ["version"]
readme = "README.md"
authors = [{name = "AlexFlipnote", email = "root@alexflipnote.dev"}]
keywords = ["discord", "http", "api", "interaction", "quart", "webhook", "slash"]

dependencies = [
  "quart>=0.18.4",
  "PyNaCl",
  "aiohttp",
]

[project.optional-dependencies]
dev = [
  "pyright",
  "flake8",
  "toml",
]

docs = [
  "sphinx",
  "furo",
  "myst-parser",
]

maintainer = [
  "twine",
  "wheel",
  "build",
]

[tool.setuptools]
packages = ["discord_http"]

[tool.setuptools.dynamic]
version = {attr = "discord_http.__version__"}
readme = {file = ["README.md"]}

[tool.flake8]
max-line-length = 128
ignore = [
  "D210", "D400", "D401", "D100", "D202", "D413", "D107",
  "D101", "D103", "D102", "E121", "D205", "D209", "D105",
  "E252", "W605", "W504", "E128", "E124", "E999", "W504"
]

[tool.pyright]
reportOptionalOperand = "none"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "basic"
pythonVersion = "3.11"

include = ["discord_http"]
exclude = [
  "**/__pycache__", "**/*.pyc", "*.egg-info",
  ".venv", "build", "docs", "dist",
]
